syntax = "proto3";

option java_package = "org.sorapointa.proto";

message CurVehicleInfo {
  uint32 entity_id = 1;
  uint32 pos = 2;
}
