syntax = "proto3";

option java_package = "org.sorapointa.proto";

enum MpSettingType {
  MP_SETTING_TYPE_NO_ENTER = 0;
  MP_SETTING_TYPE_ENTER_FREELY = 1;
  MP_SETTING_TYPE_ENTER_AFTER_APPLY = 2;
}
